assets/sass/partials/_main.scss
/* ... */
.genesis-nav-menu {
  clear: both;
  color: $c_navMainLink;
  font: {
    family: $f_baseFont;
  }
  line-height: 1.5;
  width: 100%;
  overflow:hidden;
	background: {
		color: $c_navMainBg;
	}
	@include background-image(linear-gradient(lighten($c_navMainBg,10%), darken($c_navMainBg,20%)));
	@include box-shadow(0px 1px 5px $c_navMainLinkShadow);
  .menu-item {
		.sub-menu {
			.menu-item {
				a {
					@include background-image(none);
				}
			}
		}
    display: inline-block;
    text: {
      align: left;
    }
    margin: {
      left: -4px; // kill inline-block margin, space between items
      bottom:0;
    }
    &:hover {
      position: static;
      > .sub-menu {
        left: auto;
        @include opacity(1);
      }
    }
    > a:after // set up the top level arrows first
    {
      content: '▼';
      font-size: .5em;
      vertical-align: middle;
      padding: {
        left: 5px;
      }
    }
  }
  > .menu-item {
    > a:only-child:after { // clear if only child
      content: '';
    }
  }
  > li:nth-child(1) { //depending on whether home is item 1 in the menu or not, otherwise switch to 2
		margin: {
			left: 0px; // reset inline-block margin, space between items
		}
    a {
      border: {
        width: 0 1px 0 0;
        style: solid;
        color: $c_navMainBorder;
      }
    }
    .sub-menu {
      a {
        border: 0;
      }
    }
  }
  a {
    display: block;
    position: relative;
    color: $c_navMainLink;
    padding: 18px 40px;
    margin: 0;
    border: {
      width: 0 1px 0 0;
      style: solid;
      color: $c_navMainBorder;
    }
    text: {
      decoration: none;
      transform: none;
    }
		font: {
			size: $f_navMainLink-px;
			size: $f_navMainLink;
		}
    .last {
      border: {
        right:0;
      }
    }
    &:hover {
      color: $c_navMainLinkHover;
			background: {
				color: darken($c_navMainBgActive,10%);
			}
			@include background-image(linear-gradient($c_navMainBgActive, darken($c_navMainBgActive,10%)));
//      background: {
//        color: $c_navMainLinkBgHover;
//      }
      text-shadow: 1px 1px 1px $c_navMainLinkShadow;
      position: static;
    }
  }
  .current-menu-item,
  .current-menu-parent,
  .current-menu-ancestor {
    > a {
      color: $c_navSubLink;
      text-shadow: 1px 1px 1px $c_navMainLinkShadow;
			background: {
				color: $c_navMainBgActive;
			}
			@include background-image(linear-gradient($c_navMainBgActive, darken($c_navMainBgActive,10%)));
			font: {
				weight: 700;
			}
    }
    > a:hover {
      color: $c_navSubLinkHover;
      background: {
        color: $c_navSubLinkBgHover;
      }
    }
  }
  .sub-menu {
    left: -9999px;
    @include opacity(0);
    position: absolute;
    width: $d_navSubWidth;
    z-index: 99;
    margin: {
      left: 4px; // correction for killing inline-block margin
    }
    a {
      background: {
        color: $c_navSubBg;
      }
      color: $c_navSubLink;
      text-shadow: 1px 1px 1px $c_navMainLinkShadow;
      border: {
        width: 0 0 1px;
        style: solid;
        color: $c_navSubBorder;
      }
      font: {
        size: $f_navSubLink-px;
        size: $f_navSubLink;
      }
      padding: 16px 20px;
      position: relative;
      width: $d_navSubWidth;
      &:hover {
        color: $c_navSubLinkHover;
        background: none;
      }
    }
    > .menu-item {
			background: {
				color: $c_navSubLinkBgHover;
			}
			@include background-image(linear-gradient($c_navSubLinkBgHover, darken($c_navSubLinkBgHover, 10%)));
      > a:after // set up the downward arrow for top level items
      {
        content: ' ▶';
        font: {
          size: .5em;
        }
        vertical-align: middle;
        padding: {
          left: 5px;
        }
      }
      > a:only-child:after { // clear if only child
        content: '';
      }
    }
    .sub-menu {
      margin: -53px 0 0 199px;
    }
  }
  > .first {
    > a {
      padding: {
        left: 0;
      }
    }
  }
  > .last {
    > a {
      padding: {
        right: 0;
      }
    }
  }
  > .right {
    display: inline-block;
    float: right;
    list-style-type: none;
    padding: 28px 0;
    text: {
      transform: none;
    }
    > a {
      display: inline;
      padding: 0;
    }
  }
  > .rss {
    > a {
      margin: {
        left: 48px;
      }
    }
  }
  .menu-item-search {
    display:none;
    visibility:hidden;
  }
  > .search {
    padding: 14px 0 0;
  }
}
/* ... */

